Unload records after TX completion